# cosmic-ray-rm

./: Dockerfile  Procfile  README.md  Taskfile.yml  connect-four-read-model.cabal  readmodel.sql
docker/read-model/: Dockerfile  create-db.sh  readmodel.sql
hasura/: metadata.json
src/: EventStream.hs  Main.hs  PostgresReadModel.hs  ReadModel.hs  RedisEventStream.hs  Types.hs
