name:                connect-four-read-model
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/connect-four-read-model#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable connect-four-read-model
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple
                     , aeson
                     , uuid
                     , bytestring
                     , aeson-pretty
                     , text         
                     , hasql
                     , hasql-transaction  
                     , contravariant-extras  
                     , either                             
  other-modules:       Types
  ghc-options:         -W
                       -Wall
                       -fwarn-tabs
                       -fwarn-unused-imports
                       -fwarn-name-shadowing
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-missing-signatures
